fix visibility bottone quando si è user

--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -162,6 +162,7 @@
 
 .button.invisible {
   pointer-events: none;
+  visibility: hidden;
 }
 
 /* .roundButtons > * {
